--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,4 +1,4 @@
 # pnpm에게 어떤 디렉토리를 워크스페이스 패키지로 포함할지 알려준다.
 packages:
-  # all packages in direct subdirs of packages/
-  - 'packages/*'
+  - 'BackEnd/*'
+  - 'FrontEnd/*'
