[ENV][Chore] : husky 설정
- 커밋 전에 Lint 확인
- 커밋 전에 Test 확인
- 어느 하나라도 깨질 경우 커밋이 취소되게 설정

--- a/package.json
+++ b/package.json
@@ -9,5 +9,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  }
 }
