--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,8 +4,9 @@
   "description": "따라따라의 선따라길따라 BackEnd 코드",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "pnpm src/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "pnpm lint-staged"
   },
   "keywords": [],
   "author": "",
