[ENV][fix] : ESLint import 에러 발생하는 것 처리

--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,6 +1,10 @@
 {
   "name": "ddara-frontend",
   "private": true,
+  "workspaces": [
+    "FrontEnd",
+    "BackEnd"
+  ],
   "version": "0.0.0",
   "type": "module",
   "scripts": {
