--- a/FrontEnd/tsconfig.app.json
+++ b/FrontEnd/tsconfig.app.json
@@ -6,6 +6,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "rootDir": ".",
+    "outDir": "dist",
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
