--- a/FrontEnd/tsconfig.node.json
+++ b/FrontEnd/tsconfig.node.json
@@ -5,6 +5,8 @@
     "lib": ["ES2023"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "rootDir": ".",
+    "outDir": "dist",
 
     /* Bundler mode */
     "moduleResolution": "Bundler",
