[FE][Chore] : Storybook 보일러 플레이트 설정

--- a/FrontEnd/tsconfig.app.json
+++ b/FrontEnd/tsconfig.app.json
@@ -9,6 +9,12 @@
     "rootDir": ".",
     "outDir": "dist",
 
+    // path
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "Bundler",
     "allowImportingTsExtensions": true,
