--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vitest": "^2.1.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
