--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "front": "pnpm --filter ddara-frontend dev",
     "backend": "pnpm --filter ddara-backend dev",
     "dev": "pnpm -r dev",
-    "lint": "pnpm lint-staged"
+    "lint": "pnpm lint-staged",
+    "typedoc": "typedoc --options typedoc.json",
+    "jsdoc": "jsdoc -c jsdoc.json"
   },
   "workspaces": [
     "FrontEnd",
@@ -43,8 +45,10 @@
     "eslint-plugin-storybook": "^0.11.0",
     "globals": "^15.11.0",
     "husky": "^9.1.6",
+    "jsdoc": "^4.0.4",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "typedoc": "^0.26.11",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
