[ENV][Feat] : 폴더명 소문자로 변경 및 eslin import 세팅 수정

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,8 +2,8 @@
   "name": "ddara-frontend",
   "private": true,
   "workspaces": [
-    "FrontEnd",
-    "BackEnd"
+    "frontend",
+    "backend"
   ],
   "version": "0.0.0",
   "type": "module",
