--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "jsdoc": "jsdoc -c jsdoc.json"
   },
   "workspaces": [
-    "FrontEnd",
-    "BackEnd"
+    "frontend",
+    "backend"
   ],
   "keywords": [],
   "author": "",
@@ -56,7 +56,6 @@
     "typedoc": "^0.26.11",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10",
     "vitest": "^2.1.4"
   },
   "lint-staged": {
