--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
   "description": "따라따라의 선따라길따라 BackEnd 코드",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm src/index.js",
+    "dev": "node src/index.js",
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
@@ -20,7 +20,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "pg": "^8.13.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
