--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
     "eslint": "^9.13.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.11.0",
