[ENV][Fix] #1 : eslint 및 ReadMe.md 수정

--- a/docs/docusaurus/tsconfig.json
+++ b/docs/docusaurus/tsconfig.json
@@ -2,6 +2,12 @@
   // This file is not used in compilation. It is here just for a nice editor experience.
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "paths": {
+      "@site/*": ["src/*"],
+      "@theme/*": ["src/theme/*"],
+      "@component/*": ["src/components/*"],
+      "@markdown/*": ["src/components/markdown/*"],
+    }
   }
 }
