--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@types/navermaps": "^3.7.8",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "classnames": "^2.5.1",
@@ -46,6 +47,7 @@
     "eslint-plugin-storybook": "^0.11.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
+    "react-router-dom": "^6.28.0",
     "storybook": "^8.4.2",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
