--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.1",
     "pg": "^8.13.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "ws": "^8.18.0"
   }
 }
