--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@fontsource/pretendard": "^5.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
@@ -47,7 +49,6 @@
     "eslint-plugin-storybook": "^0.11.0",
     "globals": "^15.11.0",
     "postcss": "^8.4.47",
-    "react-router-dom": "^6.28.0",
     "storybook": "^8.4.2",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.2",
