--- a/package.json
+++ b/package.json
@@ -55,12 +55,12 @@
     "jsdoc": "^4.0.4",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "typedoc": "^0.26.11",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vitest": "^2.1.4"
   },
-
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
       "eslint --fix",
@@ -68,5 +68,4 @@
     ],
     "!docs/**/*.{js,jsx,ts,tsx}": "eslint --fix"
   }
-
 }
