--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@fontsource/pretendard": "^5.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
