--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
       "pg": "^8.13.1",
       "swagger-jsdoc": "^6.2.8",
       "swagger-ui-express": "^5.0.1",
+      "uuid": "^11.0.3",
       "ws": "^8.11.0"
     }
   }
