--- a/.github/workflows/auto-assign-reviewers.yml
+++ b/.github/workflows/auto-assign-reviewers.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           script: |
             const targetBranch = context.payload.pull_request.base.ref;
-            const reviewers = targetBranch === 'main' ? 3 : 2;
+            const reviewers = (targetBranch === 'main' || targetBranch === 'development') ? 3 : 2;
             core.setOutput('number_of_reviewers', reviewers);
 
       - name: 'Assign Reviewers'
