--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.8'
 services:
   backend:
     build:
@@ -11,16 +11,28 @@ services:
     networks:
       - app-network
 
-  nginx:
-    image: nginx:alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+  frontend:
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
     ports:
       - "80:80"
     networks:
       - app-network
     depends_on:
       - backend
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+    ports:
+      - "443:443"
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - app-network
 
 networks:
   app-network:
