--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile
-    ports:
-      - "3001:3001"
     environment:
       - NODE_ENV=production
     networks:
@@ -15,8 +13,6 @@ services:
     build:
       context: .
       dockerfile: frontend/Dockerfile
-    ports:
-      - "80:80"
     networks:
       - app-network
     depends_on:
@@ -26,7 +22,9 @@ services:
     image: nginx:alpine
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt
+      - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
+      - "80:80"
       - "443:443"
     depends_on:
       - backend
