[FE][Feat] Main.tsx 화면에서 4주차 데모를 위한 실시간 현재 위치 받아오는 기능 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "lint": "pnpm lint-staged",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "uuid": "^11.0.3"
   },
   "dependencies": {
     "@fontsource/pretendard": "^5.1.0",
