--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,33 @@ services:
     build:
       context: .
       dockerfile: backend/Dockerfile
-    ports:
-      - "3001:3001"
     environment:
       - NODE_ENV=production
     networks:
       - app-network
 
-  nginx:
-    image: nginx:alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    ports:
-      - "80:80"
+  frontend:
+    build:
+      context: .
+      dockerfile: frontend/Dockerfile
     networks:
       - app-network
     depends_on:
       - backend
+
+  nginx:
+    image: nginx:alpine
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "80:80"
+      - "443:443"
+    depends_on:
+      - backend
+      - frontend
+    networks:
+      - app-network
 
 networks:
   app-network:
