--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,9 @@ services:
     networks:
       - app-network
     volumes:
-      - ./backend:/backend-app
+      - .:/app
+      - /app/node_modules
+      - /app/backend/node_modules
 
   frontend:
     build:
@@ -18,7 +20,11 @@ services:
     networks:
       - app-network
     volumes:
-      - ./frontend:/frontend-app
+      - .:/app
+      - /app/node_modules
+      - /app/frontend/node_modules
+    depends_on:
+      - backend
 
   nginx:
     image: nginx:alpine
