--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
   nginx:
     image: nginx:alpine
     volumes:
+      - ./frontend/dist:/usr/share/nginx/html
       - /etc/letsencrypt:/etc/letsencrypt
       - ./nginx.conf:/etc/nginx/nginx.conf
     ports:
