--- a/nginx.conf
+++ b/nginx.conf
@@ -46,6 +46,13 @@ http {
             proxy_set_header Host $host;
         }
 
+        location /storybook/ {
+            proxy_pass http://frontend:6006;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+
         location / {
             root /usr/share/nginx/html;
             index index.html;
