--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
+    "storybook": "pnpm --filter ddara-frontend storybook",
     "typedoc": "typedoc --options typedoc.json",
     "jsdoc": "jsdoc -c jsdoc.json"
   },
